--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,4 +12,6 @@
     - elsif flash[:warning]
       #warning.message= flash[:warning]
     #main
+      = link_to movies_path do
+        <div id="app_banner" class="banner">RottenPotatoes</div>
       = yield
