--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -64,3 +64,12 @@ form label {
   font-weight: bold;
   color: maroon;
 }
+div#app_banner.banner {
+  width: 100%;
+  padding: 30px;
+  margin-bottom: 16px;
+  background-color: wheat;
+  color: red;
+  text-align: center;
+  font-size: 26px;
+}
