--- a/app/views/movies/new.html.haml
+++ b/app/views/movies/new.html.haml
@@ -10,6 +10,9 @@
  
   = label :movie, :release_date, 'Released On'
   = date_select :movie, :release_date, :start_year => 1930
+  
+  = label :movie, :description, 'description'
+  = text_field :movie, :description
 
   = submit_tag 'Save Changes'
   = submit_tag 'Cancel'
