--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,4 +14,5 @@
     #main
       = link_to movies_path do
         <div id="app_banner" class="banner">RottenPotatoes</div>
+      = render :partial => 'sessions_login'
       = yield
