--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,3 +1,9 @@
+%h1 Search TMDb for a movie
+
+= form_tag :action => 'search_tmdb' do
+  <input id="search_terms" name="search_terms" type="text" />
+  = submit_tag 'Search TMDb'
+
 %h1 All Movies
 
 %table#movies
