--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,5 +14,10 @@
     #main
       = link_to movies_path do
         <div id="app_banner" class="banner">RottenPotatoes</div>
-      = render :partial => 'sessions_login'
-      = yield
+    #login
+      - if @current_user
+        %p.welcome  Welcome, #{@current_user.name}!
+        = link_to 'Log Out', logout_path, :method => :post
+      - else
+        %p.login= link_to 'Log in with your Twitter account', '/auth/twitter'
+    = yield
