--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -6,6 +6,17 @@
 
 %h1 All Movies
 
+<label for="G_filter">G</label>
+<input type="checkbox" id="G_filter" checked/>
+<label for="PG_filter">PG</label>
+<input type="checkbox" id="PG_filter" checked/>
+<label for="PG-13_filter">PG-13</label>
+<input type="checkbox" id="PG-13_filter" checked/>
+<label for="R_filter">R</label>
+<input type="checkbox" id="R_filter" checked/>
+<label for="NC-17_filter">NC-17</label>
+<input type="checkbox" id="NC-17_filter" checked/>
+
 %table#movies
   %thead
     %tr
@@ -13,14 +24,16 @@
       %th Movie Title
       %th Rating
       %th Release Date
+      %th Description
       %th More Info
   %tbody
     - @movies.order('title').each_with_index do |movie, index|
-      %tr
-        %td= index
+      %tr{:class=>movie.rating}
+        %td= index+1
         %td= movie.title
         %td= movie.rating
         %td= movie.release_date
+        %td= movie.description
         %td= link_to "More about #{movie.title}", movie_path(movie)
 %div{class: "row"}      
   %p{class: "column",:style=>"text-align:left;"}= link_to 'Add new movie', new_movie_path
