--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,3 +77,10 @@ div#login,
 p.login {
   text-align: end;
 }
+#movieInfo {
+  padding: 10px;
+  position: fixed;
+  border: 2px double #a8d1e8;
+  background: #fee5e0;
+  box-shadow: 0 2px 3px #666666;
+}
