--- a/app/views/movies/edit.html.haml
+++ b/app/views/movies/edit.html.haml
@@ -2,7 +2,19 @@
 
 = form_tag movie_path(@movie), :method => :put do
 
-  = render :partial => 'movie_form'
+  = label :movie, :title, 'Title'
+  = text_field :movie, :title
+
+  = label :movie, :rating, 'Rating'
+  = select :movie, :rating, ['G','PG','PG-13','R','NC-17']
+ 
+  = label :movie, :release_date, 'Released On'
+  = date_select :movie, :release_date, :start_year => 1930
+  
+  = label :movie, :description, 'description'
+  = text_field :movie, :description
 
   = submit_tag 'Save Changes'
   = link_to "Cancel", :back
+
+
