--- a/app/views/reviews/edit.html.haml
+++ b/app/views/reviews/edit.html.haml
@@ -1,6 +1,6 @@
 %h2 Edit Movie
 
-= form_tag movie_reviews_path(@movie,@review), :method => :put do
+= form_tag movie_review_path(@movie,@review), :method => :put do
 
   = label :review, :potatoes, 'Potatoes'
   = select_tag 'review[potatoes]', options_for_select(1..5)
