--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -81,6 +81,6 @@ p.login {
   padding: 10px;
   position: fixed;
   border: 2px double #a8d1e8;
-  background: #fee5e0;
+  background: wheat;
   box-shadow: 0 2px 3px #666666;
 }
