--- a/app/views/movies/search.html.haml
+++ b/app/views/movies/search.html.haml
@@ -17,6 +17,8 @@
       %th{:style => "width:15%;"} Average potatoes
       %th{:style => "width:15%;"} Total vote count
       %th{:style => "width:20%;"} Release Date
+      %th{:style => "width:10%;"} Add Movie
+
   %tbody
     - @search.each_with_index do |movie,index|
       %tr
@@ -27,5 +29,6 @@
       %td= movie.vote_average/2
       %td= movie.vote_count
       %td= movie.release_date
+      %td= link_to 'Add new movie', movies_path(:movie => {:title => movie.title,:release_date => movie.release_date,:description => movie.overview,:rating=>"PG"}) , :method => :post
       
 = link_to 'Back to main menu', movies_path
